tests/machine/x/c/update_stmt.error
exit status 1
/workspace/mochi/tests/machine/x/c/update_stmt.c: In function ‘_mochi_main’:
/workspace/mochi/tests/machine/x/c/update_stmt.c:64:35: error: ‘(person_t *)&people’ is a pointer; did you mean to use ‘->’?
   64 |   for (int tmp4 = 0; tmp4 < people.len; tmp4++) {
      |                                   ^
      |                                   ->
/workspace/mochi/tests/machine/x/c/update_stmt.c:65:27: error: ‘(person_t *)&people’ is a pointer; did you mean to use ‘->’?
   65 |     person_t tmp5 = people.data[tmp4];
      |                           ^
      |                           ->
/workspace/mochi/tests/machine/x/c/update_stmt.c:70:11: error: ‘(person_t *)&people’ is a pointer; did you mean to use ‘->’?
   70 |     people.data[tmp4] = tmp5;
      |           ^
      |           ->
/workspace/mochi/tests/machine/x/c/update_stmt.c:73:37: error: incompatible types when assigning to type ‘person_list_t’ from type ‘person_t *’ {aka ‘struct person_t *’}
   73 |   test_update_adult_status_people = people;
      |                                     ^~~~~~
