tests/machine/x/c/update_stmt.c
// Generated by Mochi compiler v0.10.27 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct person_t person_t;

typedef struct person_t {
  char *name;
  int age;
  char *status;
} person_t;
typedef struct {
  int len;
  person_t *data;
} person_list_t;
person_list_t create_person_list(int len) {
  person_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(person_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static person_list_t test_update_adult_status_people;
static void test_update_adult_status() {
  person_t tmp1[] = {
      (person_t){.name = "Alice", .age = 17, .status = "minor"},
      (person_t){.name = "Bob", .age = 26, .status = "adult"},
      (person_t){.name = "Charlie", .age = 19, .status = "adult"},
      (person_t){.name = "Diana", .age = 16, .status = "minor"}};
  int tmp1_len = sizeof(tmp1) / sizeof(tmp1[0]);
  int tmp2 = 1;
  if (test_update_adult_status_people.len != tmp1_len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0; i3 < test_update_adult_status_people.len; i3++) {
      if (strcmp(test_update_adult_status_people.data[i3].name,
                 tmp1[i3].name) != 0 ||
          test_update_adult_status_people.data[i3].age != tmp1[i3].age ||
          strcmp(test_update_adult_status_people.data[i3].status,
                 tmp1[i3].status) != 0) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int _mochi_main() {
  person_t people[] = {
      (person_t){.name = "Alice", .age = 17, .status = "minor"},
      (person_t){.name = "Bob", .age = 25, .status = "unknown"},
      (person_t){.name = "Charlie", .age = 18, .status = "unknown"},
      (person_t){.name = "Diana", .age = 16, .status = "minor"}};
  int people_len = sizeof(people) / sizeof(people[0]);
  for (int tmp4 = 0; tmp4 < people.len; tmp4++) {
    person_t tmp5 = people.data[tmp4];
    if (tmp5.age >= 18) {
      tmp5.status = "adult";
      tmp5.age = tmp5.age + 1;
    }
    people.data[tmp4] = tmp5;
  }
  printf("ok\n");
  test_update_adult_status_people = people;
  test_update_adult_status();
  return 0;
}
int main() { return _mochi_main(); }
